--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/assets/icon.png" type="image/x-icon">
+    <link rel="icon" href="/assets/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Zenith</title>
   </head>
